@startuml Y_Manager_Call_Chain
scale 2
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam defaultFontName "Microsoft YaHei"
skinparam nodesep 30
skinparam ranksep 35
caption v2.2.0 · 2026-09-07

title 双流水线总览 — Compression & Decompression

left to right direction

package "SFC_GUI" {
    class CompressionWorker {
        + doCompression() / doDecompression()
        + requestStop()
        .. 排队信号 ..
        + detailedProgress(..)
        + finished(success, message)
    }
}

package "Y_Manager — 总指挥" {
    class CompressionLoop {
        + compressionLoop(paths, mode, password)
        - readerLoop : 借池块/编号/结算/进度取消
        - workerLoop : 压缩+两次加密
        - writerLoop : 定序/纯追加/攒回填表
    }
    class DecompressionLoop {
        + decompressionLoop(mode, password)
        - readerLoop : 目录解密/顺序读/FileStart
        - workerLoop : 两次解密+解压
        - writerLoop : 定序/按文件开关
        - processLinks : 链接最后重建
    }
}

package "ThreadPool — 复用组件" {
    class "SafeQueue<T>" as SafeQueue {
        + push(T&&) 「关后拒绝」
        + waitPop(T&) 「排空契约」
        + setDone() 「notify_all」
    }
    class "WriteSorter<T>" as WriteSorter {
        + canWrite(seq, T&&)
        + takeInOrder() / drainAll()
    }
    class BufferPool {
        + acquire() 「背压点」
        + release(..) / close()
    }
}

package "Pipeline Messages" {
    class BlockTask {
        + inputData : 池块(明文)
    }
    class PipelineMessage {
        + kind : Block | Settlement
        + encryptedData / exception
        + processedSizeOffset
    }
    class DecompressTask {
        + expectedOriginal
        + encryptedData : 池块(密文)
    }
    class DecompressionMessage {
        + kind : Block | FileStart
        + decompressedData / exception
        + outputPath / originalSize
    }
}

package "CompressorFileSystem" {
    class StrategyFactory {
        + {static} createModules(mode, password)
        + {static} idToMode(id)
    }
    package "读线程独占" {
        class BinaryStandardLoader {
            + headerLoaderIterator(enc)
            + takeBlockSpans()
            + fileQueue : FileTaskQueue
        }
        class DataLoader {
            + getBlock() 「须复制」
        }
    }
    package "写线程独占/收尾" {
        class DataExporter {
            + exportCompressedData
            + exportDecompressedData
        }
        class CatalogFinalizer {
            + finalize(sizeEntries, spans, enc, mode)
            「先回填后加密」
        }
        class HeaderWriter {
            + headerWriter(paths, out, root, mode)
        }
    }
}

CompressionWorker ..> HeaderWriter : ① 建档
CompressionWorker ..> CompressionLoop : ② (paths, mode, password)
CompressionWorker ..> DecompressionLoop : (mode, password)

CompressionLoop ..> SafeQueue : ×2
CompressionLoop ..> BufferPool
CompressionLoop ..> WriteSorter
DecompressionLoop ..> SafeQueue : ×2
DecompressionLoop ..> BufferPool
DecompressionLoop ..> WriteSorter

CompressionLoop ..> BlockTask
CompressionLoop ..> PipelineMessage
DecompressionLoop ..> DecompressTask
DecompressionLoop ..> DecompressionMessage

CompressionLoop ..> StrategyFactory : 每工人私有模块
DecompressionLoop ..> StrategyFactory : 读线程+每工人
CompressionLoop ..> BinaryStandardLoader
CompressionLoop ..> DataLoader
CompressionLoop ..> DataExporter
CompressionLoop ..> CatalogFinalizer : 排空后收尾
DecompressionLoop ..> BinaryStandardLoader
DecompressionLoop ..> DataExporter

note as N1
  **压缩流水线:** reader 借池块←DataLoader 复制并编号 →
  N workers compress+encrypt×2(池块原地变换) → writer
  WriteSorter 按序重组→DataExporter 纯追加 → 排空后
  CatalogFinalizer(回填大小槽+目录区加密)
  池块全链路流动:读线程唯一借出,写线程唯一归还
end note

note as N2
  **解压流水线:** reader 目录解密+数据区零 seek 顺序读
  (FileStart 占号,expectedOriginal 预计算) → N workers
  decrypt×2+decompress(原地覆写) → writer 按序写出 →
  processLinks(链接严格最后)
  **集中关闭:** join 读→关任务队列→join 工人→关结果
  队列→join 写→收尾→关池
end note

@enduml
